--- a/app/views/tabinabi/index.html.erb
+++ b/app/views/tabinabi/index.html.erb
@@ -56,12 +56,18 @@
           </div>
           <% end %>
         </div>
-        
-        <%# <% @tag_list.each do |list| %>
-        <%# <%= link_to list.name, tag_spots_path(tag_id: list.id) %> 
-        <%# (<%=list.spots.count%>
-         <%# <%end%>  
-
         <div class="inazuma">最初1234最後</div>
+
+        <h1 class="page-heading">タグ一覧</h1>
+          <% @tag_list.each do |list| %>
+            <%= link_to tag_spots_path(tag_id: list.id) , method: :get  do%>
+              <div class="tag_list">
+                <b class="tag_list_name"><%= list.name %></b>
+                <b class="tag_list_count">(<%= list.spots.count %>)</b>
+              </div>
+            <%end%>
+          <%end%> 
+          
+      
       </div>
     </main>
