--- a/app/assets/stylesheets/tabinabi-body.css
+++ b/app/assets/stylesheets/tabinabi-body.css
@@ -118,6 +118,13 @@
   color: orange;
 }
 
+.kaminari{
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  margin: 20px 0 50px 0;
+}
+
 .info__sentens {
   margin-left : 5%;
 }
