タグ絞り込み時のページネーション実装

--- a/app/views/spots/search_tag.html.erb
+++ b/app/views/spots/search_tag.html.erb
@@ -40,6 +40,6 @@
           <% end %>
         </div>
 
-        <div class="inazuma">最初1234最後</div>
+        <div class="kaminari"><%= paginate(@spots) %></div>
       </div>
     </main>
