--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     </header>
     <div class="sub-header">
       <div class="sub-inner">
-      <div class="sub">北海道・東北</div>
+      <div class="sub"><%= link_to "北海道・東北", hokaidoutouhoku_index_path %></div>
       <div class="sub">関東</div>
       <div class="sub">北陸</div>
       <div class="sub">東海</div>
