関東地方ページ実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     <div class="sub-header">
       <div class="sub-inner">
       <div class="sub"><%= link_to "北海道・東北", hokaidoutouhoku_index_path %></div>
-      <div class="sub">関東</div>
+      <div class="sub"><%= link_to "関東", kantou_index_path %></div>
       <div class="sub">北陸</div>
       <div class="sub">東海</div>
       <div class="sub">近畿</div>
