東海地方ページ実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
       <div class="sub"><%= link_to "北海道・東北", hokaidoutouhoku_index_path %></div>
       <div class="sub"><%= link_to "関東", kantou_index_path %></div>
       <div class="sub"><%= link_to "北陸", hokuriku_index_path %></div>
-      <div class="sub">東海</div>
+      <div class="sub"><%= link_to "東海", toukai_index_path %></div>
       <div class="sub">近畿</div>
       <div class="sub">中国</div>
       <div class="sub">四国</div>
