近畿地方ページ実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
       <div class="sub"><%= link_to "関東", kantou_index_path %></div>
       <div class="sub"><%= link_to "北陸", hokuriku_index_path %></div>
       <div class="sub"><%= link_to "東海", toukai_index_path %></div>
-      <div class="sub">近畿</div>
+      <div class="sub"><%= link_to "近畿", kinki_index_path %></div>
       <div class="sub">中国</div>
       <div class="sub">四国</div>
       <div class="sub">九州・沖縄</div>
