--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       <div class="sub"><%= link_to "北陸", hokuriku_index_path %></div>
       <div class="sub"><%= link_to "東海", toukai_index_path %></div>
       <div class="sub"><%= link_to "近畿", kinki_index_path %></div>
-      <div class="sub">中国</div>
+      <div class="sub"><%= link_to "中国", chuugoku_index_path %></div>
       <div class="sub">四国</div>
       <div class="sub">九州・沖縄</div>
       </div>
