四国地方ページ実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
       <div class="sub"><%= link_to "東海", toukai_index_path %></div>
       <div class="sub"><%= link_to "近畿", kinki_index_path %></div>
       <div class="sub"><%= link_to "中国", chuugoku_index_path %></div>
-      <div class="sub">四国</div>
+      <div class="sub"><%= link_to "四国", shikoku_index_path %></div>
       <div class="sub">九州・沖縄</div>
       </div>
     </div>
