ビューの変更および更新

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,8 @@
       <div class="device_body">
 
         <div class="device_body_left">
-          TRIP  NAVIGATION<br>NEW USER
+          TRIP  NAVIGATION<br>NEW USER<br>
+          <div class="device_body_left_in"><%= link_to "LOG IN", new_user_session_path %></div>
         </div>
 
         <div class="device_body_right">
