--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -19,6 +19,15 @@
   padding: 30px 0 0 40px;
 }
 
+.device_body_left_in {
+  margin-top: 80px;
+  border: black solid 3px;
+  text-align: center;
+  opacity: 0.8;
+  background-color: white;
+  float: left;
+}
+
 .device_body_right {
   padding: 10px;
   margin-left: auto;
