表示するスペースを作成

--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -33,6 +33,9 @@
           <%= f.label :画像【必須】 %><br />
           <%= f.file_field :image %>
         </div>
+
+        <div id="image-list"></div>
+        
         <div class="field">
           <%= f.label :name, "タグ【必須】" %>
           <div>タグを複数登録する場合は半角スペースを開けてください</div>
