--- a/app/views/spots/edit.html.erb
+++ b/app/views/spots/edit.html.erb
@@ -32,8 +32,10 @@
       <div class="new_spot_form_therd">
         <div class="field">
           <%= f.label :画像【必須】 %><br />
-          <%= f.file_field :image %>
+          <%= f.file_field :image , id: 'spot_image'%>
         </div>
+
+        <div id="image-list"></div>
         <div class="field">
          
           <%# <%= f.label :name, "タグ" %>
