--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -31,7 +31,7 @@
       <div class="new_spot_form_therd">
         <div class="field">
           <%= f.label :画像【必須】 %><br />
-          <%= f.file_field :image %>
+          <%= f.file_field :image, id: 'spot_image' %>
         </div>
 
         <div id="image-list"></div>
