--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -23,28 +23,28 @@
 
       <div class="new_spot_form_second">
         <div class="field">
+          <%= f.label :画像【必須】 %><br />
+          <%= f.file_field :image, id: 'spot_image' %>
+        </div>
+        <div id="image-list"></div>
+      </div>
+
+      <div class="new_spot_form_therd">
+        <div class="field">
+            <%= f.label :name, "タグ【必須】" %>
+            <div>タグを複数登録する場合は半角スペースを開けてください</div>
+            <%= f.text_field :name, class:"input-tag",placeholder: "例）王道観光地 修学旅行定番 家族旅行" %>
+            <div id="search-result"></div>
+        </div>
+      </div>
+
+      <div class="new_spot_form_forth">
+        <div class="field">
           <%= f.label :観光地説明【必須】 %><br />
           <%= f.text_area :text, size: "90x17",value: @text %>
         </div>
       </div>
 
-      <div class="new_spot_form_therd">
-        <div class="field">
-          <%= f.label :画像【必須】 %><br />
-          <%= f.file_field :image, id: 'spot_image' %>
-        </div>
-
-        <div id="image-list"></div>
-        
-        <div class="field">
-          <%= f.label :name, "タグ【必須】" %>
-          <div>タグを複数登録する場合は半角スペースを開けてください</div>
-          <%= f.text_field :name, class:"input-tag",placeholder: "例）王道観光地 修学旅行定番 家族旅行" %>
-          <div id="search-result">
-          </div>
-        </div>
-
-      </div>
     </div>
     <% end %>
     </div>
